project(树)

# 12 树
add_executable(Leetcode_144_BinaryTreePreorderTraversal Leetcode_144_BinaryTreePreorderTraversal.cpp)
add_executable(Leetcode_145_BinaryTreePostorderTraversal Leetcode_145_BinaryTreePostorderTraversal.cpp)
add_executable(Leetcode_94_BinaryTreeInorderTraversal Leetcode_94_BinaryTreeInorderTraversal.cpp)
add_executable(Leetcode_589_NAryTreePreorderTraversal Leetcode_589_NAryTreePreorderTraversal.cpp)
add_executable(Leetcode_590_NAryTreePostorderTraversal Leetcode_590_NAryTreePostorderTraversal.cpp)
add_executable(Leetcode_102_BinaryTreeLevelorderTraversal Leetcode_102_BinaryTreeLevelorderTraversal.cpp)
add_executable(Leetcode_107_BinaryTreeLevelorderTraversalII Leetcode_107_BinaryTreeLevelorderTraversalII.cpp)
add_executable(Leetcode_199_BinaryTreeRightSideView Leetcode_199_BinaryTreeRightSideView.cpp)
add_executable(Leetcode_637_AverageOfLevelsInBinaryTree Leetcode_637_AverageOfLevelsInBinaryTree.cpp)
add_executable(Leetcode_429_NAryTreeLevelOrderTraversal Leetcode_429_NAryTreeLevelOrderTraversal.cpp)
add_executable(Leetcode_515_FindLargestValueInEachTreeRow Leetcode_515_FindLargestValueInEachTreeRow.cpp)
add_executable(Leetcode_226_InvertBinaryTree Leetcode_226_InvertBinaryTree.cpp)
add_executable(Leetcode_101_SymmetricTree Leetcode_101_SymmetricTree.cpp)
add_executable(Leetcode_104_MaximumDepthOfBinaryTree Leetcode_104_MaximumDepthOfBinaryTree.cpp)
add_executable(Leetcode_111_MinimumDepthOfBinaryTree Leetcode_111_MinimumDepthOfBinaryTree.cpp)
add_executable(Leetcode_222_CountCompleteTreeNodes Leetcode_222_CountCompleteTreeNodes.cpp)
add_executable(Leetcode_110_BalancedBinaryTree Leetcode_110_BalancedBinaryTree.cpp)
add_executable(Leetcode_257_BinaryTreePath Leetcode_257_BinaryTreePath.cpp)
add_executable(Leetcode_404_SumOfLeftLeaves Leetcode_404_SumOfLeftLeaves.cpp)
add_executable(Leetcode_513_FindBottomLeftTreeValue Leetcode_513_FindBottomLeftTreeValue.cpp)
add_executable(Leetcode_112_PathSum Leetcode_112_PathSum.cpp)
add_executable(Leetcode_113_PathSumII Leetcode_113_PathSumII.cpp)

# 构造二叉树
add_executable(Leetcode_106_ConstructorBinaryTreeFromInorderAndPostorderTraversal Leetcode_106_ConstructorBinaryTreeFromInorderAndPostorderTraversal.cpp)
add_executable(Leetcode_105_ConstructorBinaryTreeFromInorderAndPreorderTraversal Leetcode_105_ConstructorBinaryTreeFromInorderAndPreorderTraversal.cpp)
add_executable(Leetcode_617_MergeTwoBinaryTree Leetcode_617_MergeTwoBinaryTree.cpp)
add_executable(Leetcode_654_MixmumBinaryTree Leetcode_654_MixmumBinaryTree.cpp)

# 二叉搜索树
add_executable(Leetcode_700_SearchinABinarySearchTree Leetcode_700_SearchinABinarySearchTree.cpp)
add_executable(Leetcode_78_ValidateBinarySearchTree Leetcode_78_ValidateBinarySearchTree.cpp)
add_executable(Leetcode_530_MinmumAbsoluteDifferenceinBST Leetcode_530_MinmumAbsoluteDifferenceinBST.cpp)
add_executable(Leetcode_501_FindModeinBinarySearchTree Leetcode_501_FindModeinBinarySearchTree.cpp)

add_executable(Leetcode_235_LowestCommonAncestorOfABST Leetcode_235_LowestCommonAncestorOfABST.cpp)
add_executable(Leetcode_701_InsertIntoABST Leetcode_701_InsertIntoABST.cpp)
add_executable(Leetcode_450_DeleteNodeInBST Leetcode_450_DeleteNodeInBST.cpp)
add_executable(Leetcode_669_TrimABST Leetcode_669_TrimABST.cpp)
add_executable(Leetcode_108_ConvertSortedArrayToBST Leetcode_108_ConvertSortedArrayToBST.cpp)
add_executable(Leetcode_538_ConvertBSTtoGreaterTree Leetcode_538_ConvertBSTtoGreaterTree.cpp)


# 二叉树
add_executable(Leetcode_236_LowestCommonAncestorOfABinaryTree Leetcode_236_LowestCommonAncestorOfABinaryTree.cpp)
